unpackaged/main/default/objects/Unit__c/Unit__c.object-meta.xml
<CustomObject>
    <label>Unit</label>
    <nameField>
        <label>Unit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>