unpackaged/main/default/objects/Unit__c/fields/Animals__c.field-meta.xml
<CustomField>
    <fullName>Animals__c</fullName>
    <label>Animals</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Animals</valueSetName>
    </valueSet>
</CustomField>