unpackaged/main/default/objects/Unit__c/fields/Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_Number__c</fullName>
    <label>Chassis Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>