unpackaged/main/default/objects/Unit__c/fields/House_Type__c.field-meta.xml
<CustomField>
    <fullName>House_Type__c</fullName>
    <label>House Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Animals__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>House_Type</valueSetName>
    </valueSet>
</CustomField>