unpackaged/main/default/objects/Unit__c/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <label>Ingredients</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Ingredients</valueSetName>
    </valueSet>
</CustomField>