unpackaged/main/default/objects/Unit__c/fields/Number_of_Animals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Animals__c</fullName>
    <label>Number of Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>