unpackaged/main/default/objects/Unit__c/fields/Order_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Order_Sizes__c</fullName>
    <label>Order Sizes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>