unpackaged/main/default/objects/Unit__c/fields/Own_Catching__c.field-meta.xml
<CustomField>
    <fullName>Own_Catching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Catching</label>
    <type>Checkbox</type>
</CustomField>