unpackaged/main/default/objects/Unit__c/fields/Own_Transport__c.field-meta.xml
<CustomField>
    <fullName>Own_Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Transport</label>
    <type>Checkbox</type>
</CustomField>