unpackaged/main/default/objects/Unit__c/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <label>Production</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Production</valueSetName>
    </valueSet>
</CustomField>