unpackaged/main/default/objects/Unit__c/fields/Rearing_System__c.field-meta.xml
<CustomField>
    <fullName>Rearing_System__c</fullName>
    <label>Rearing System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rearing_System</valueSetName>
    </valueSet>
</CustomField>