unpackaged/main/default/objects/Unit__c/fields/Renewal_Price_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Price_Inc_VAT__c</fullName>
    <formula>Renewal_Price__c +  Renewal_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Price Inc VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>