unpackaged/main/default/objects/Unit__c/fields/Renewal_VAT__c.field-meta.xml
<CustomField>
    <fullName>Renewal_VAT__c</fullName>
    <formula>IF(Account__r.Parent.BillingCountry  =  &quot;United Kingdom&quot;, Renewal_Price__c * 0.2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>