unpackaged/main/default/objects/Unit__c/fields/Slap_Mark__c.field-meta.xml
<CustomField>
    <fullName>Slap_Mark__c</fullName>
    <label>Slap Mark</label>
    <length>50</length>
    <type>Text</type>
</CustomField>