unpackaged/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <columns>Business__c</columns>
    <columns>Production__c</columns>
    <columns>Animals__c</columns>
    <columns>Animals_List__c</columns>
    <columns>Status__c</columns>
    <columns>Vehicle_Registration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>